--- a/style.css
+++ b/style.css
@@ -13,6 +13,26 @@ html {
 
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Arvo&family=Bitter&family=Cabin&family=Cormorant+Garamond:ital,wght@1,700&family=Fira+Sans&family=Lato&family=Lora&family=Noto+Serif&family=Open+Sans&family=Oxygen:wght@300&family=PT+Sans:ital,wght@0,700;1,400&family=Playfair+Display:ital,wght@0,400;1,700&family=Poppins:wght@300&family=Raleway:wght@300&family=Roboto+Condensed&family=Roboto+Slab&family=Roboto:wght@300;700&family=Ruda&family=Source+Sans+Pro&display=swap');
 
+@font-face {
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 900;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/montserrat/v15/JTURjIg1_i6t8kCHKm45_epG3gnD_g.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+		U+FEFF, U+FFFD;
+}
+
+@font-face {
+	font-family: 'Monda';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/monda/v10/TK3tWkYFABsmjsphPho.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+		U+FEFF, U+FFFD;
+}
+
 /* --- Available Fonts: */
 /* 
 "Abril Fatface"
@@ -35,6 +55,8 @@ html {
 "Roboto"
 "Ruda"
 "Source Sans Pro" 
+"Montserrat" 
+"Monda" 
 */
 
 /* --- Titles & Text ---*/
@@ -70,7 +92,169 @@ p {
 /* --- Section --- */
 
 section {
-	background-image: url('https://www.reliablepsd.com/wp-content/themes/reliable/images/blog/bg19.jpg');
+	overflow: hidden;
+	min-height: 700px;
+	height: 65vh;
+	display: grid;
+	grid-template: repeat(12, 1fr) / repeat(12, 1fr);
+}
+
+section .pairing-number {
+	grid-area: 3 / 2 / span 1 / span 2;
+	background-color: white;
+	color: #42636f;
+	width: 50px;
+	height: 50px;
+	z-index: 10;
+	justify-self: center;
+	align-self: center;
+}
+
+section .pairing-number p {
+	font-size: 2rem;
+	line-height: 1.2;
+	padding: 0.5rem 1rem;
+	font-family: 'Montserrat';
+}
+
+#section10 .pairing-number p {
+	padding: 0.5rem;
+}
+
+section .pairing-fonts {
+	grid-area: 3 / 3 / span 4 / span 2;
+	color: white;
+	background: linear-gradient(to right, rgba(80, 107, 125, 0.75) 0%, rgba(80, 107, 125, 0.82) 38%, rgba(80, 107, 125, 0.96) 72%, rgba(80, 107, 125, 1) 100%);
+	z-index: 1;
+	height: 92%;
+	display: grid;
+	grid-template-rows: 5fr 0.5fr 5fr;
+	align-self: flex-end;
+	align-items: center;
+	justify-content: center;
+	justify-items: center;
+}
+
+section .pairing-fonts p {
+	font-family: 'Monda', Serif;
+	text-transform: uppercase;
+	color: white;
+	font-size: 0.9rem;
+}
+
+section .pairing-sample {
+	grid-area: 3 / 5 / span 7 / span 7;
+	background-color: #151717;
+	padding: 0;
+	margin: 0;
+	display: grid;
+	grid-template-rows: 2fr 0.5fr;
+}
+
+section .pairing-sample .up {
+	padding: 4rem;
+	background-color: #272a2a;
+}
+
+section .pairing-sample .up p,
+section .pairing-sample .up h2 {
+	color: white;
+}
+
+section .pairing-sample .up p {
+	margin-bottom: 1rem;
+	opacity: 0.65;
+	line-height: 1.3rem;
+	font-size: 1.1rem;
+}
+
+section .pairing-sample .up .signature {
+	opacity: 0.4;
+	font-style: italic;
+}
+
+section .pairing-sample .down {
+	background-color: #4e5255;
+	display: grid;
+	height: 100%;
+	grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+	align-items: center;
+	padding: 1.3rem 0.5rem;
+}
+
+section .pairing-sample .down p {
+	color: #839099;
+	justify-self: flex-start;
+	font-family: 'Monda', Serif;
+	font-size: 0.8rem;
+}
+.view-font {
+	grid-area: 1 / 2 / span 1 / span 1;
+}
+
+.view-html {
+	grid-area: 2 / 2 / span 1 / span 1;
+}
+
+.button-download {
+	grid-area: 1 / 1 / span 1 / span 1;
+}
+
+.button-code {
+	grid-area: 2 / 1 / span 1 / span 1;
+}
+
+button {
+	padding: 0.2rem 0.7rem 0.2rem 0.7rem;
+	height: 2.8rem;
+	box-shadow: 0 0 50px 0 rgb(0 0 0 / 10%);
+	border: none;
+	white-space: nowrap;
+	position: relative;
+	cursor: pointer;
+	background-color: #272a2a;
+	color: white;
+	font-family: 'Monda';
+	font-size: 0.8rem;
+	width: 55%;
+	height: 80%;
+	justify-self: flex-end;
+	margin: auto 1rem;
+}
+
+button:hover {
+	background-color: #82919c;
+}
+
+#section1 {
+	background-image: url('./img/bg1.jpg');
+}
+#section2 {
+	background-image: url('./img/bg2.jpg');
+}
+#section3 {
+	background-image: url('./img/bg3.jpg');
+}
+#section4 {
+	background-image: url('./img/bg4.jpg');
+}
+#section5 {
+	background-image: url('./img/bg5.jpg');
+}
+#section6 {
+	background-image: url('./img/bg6.jpg');
+}
+#section7 {
+	background-image: url('./img/bg7.jpg');
+}
+#section8 {
+	background-image: url('./img/bg8.jpg');
+}
+#section9 {
+	background-image: url('./img/bg9.jpg');
+}
+#section10 {
+	background-image: url('./img/bg10.jpg');
 }
 
 /* --- Footer --- */
