--- a/style.css
+++ b/style.css
@@ -33,6 +33,46 @@ html {
 		U+FEFF, U+FFFD;
 }
 
+@font-face {
+	font-family: 'Ruda';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/ruda/v14/k3kKo8YQJOpFgHQ1mQ5VkEbUKaJFsh_50qk.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+		U+FEFF, U+FFFD;
+}
+
+@font-face {
+	font-family: 'Abril Fatface';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/abrilfatface/v12/zOL64pLDlL1D99S8g8PtiKchq-dmjQ.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+		U+FEFF, U+FFFD;
+}
+
+@font-face {
+	font-family: 'Cormorant Garamond';
+	font-style: italic;
+	font-weight: 700;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/cormorantgaramond/v9/co3WmX5slCNuHLi8bLeY9MK7whWMhyjYrEPzvD-KzhM.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+		U+FEFF, U+FFFD;
+}
+
+@font-face {
+	font-family: 'PT Sans';
+	font-style: normal;
+	font-weight: 700;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/ptsans/v12/jizfRExUiTo99u79B_mh0O6tLQ.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+		U+FEFF, U+FFFD;
+}
+
 /* --- Available Fonts: */
 /* 
 "Abril Fatface"
@@ -160,9 +200,8 @@ section .pairing-fonts {
 
 section .pairing-fonts p {
 	font-family: 'Monda', Serif;
-	text-transform: uppercase;
 	color: white;
-	font-size: 0.8rem;
+	font-size: 0.9rem;
 	opacity: 0.6;
 	margin-right: 2rem;
 	font-weight: lighter;
@@ -182,7 +221,7 @@ section .pairing-sample {
 }
 
 section .pairing-sample .up {
-	padding: 4rem;
+	padding: 3rem 4rem 4rem 4rem;
 	background-color: #272a2a;
 }
 
@@ -234,6 +273,16 @@ section .pairing-sample .down p {
 	grid-area: 2 / 1 / span 1 / span 1;
 }
 
+.font1 {
+	align-self: flex-end;
+	margin-bottom: 1rem;
+}
+
+.font2 {
+	align-self: flex-start;
+	margin-top: 1rem;
+}
+
 button {
 	padding: 0.2rem 0.7rem 0.2rem 0.7rem;
 	height: 2.8rem;
@@ -259,6 +308,127 @@ button:hover {
 #section1 {
 	background-image: url('./img/bg1.jpg');
 }
+
+#section1 .pairing-sample .up h2 {
+	font-size: 49px;
+	line-height: 46px;
+	font-weight: 700;
+	font-family: 'Roboto Condensed', sans-serif;
+}
+
+#section1 .pairing-sample .up p {
+	font-family: 'Cabin';
+}
+
+#section2 .pairing-sample .up h2 {
+	font-weight: 300;
+	font-family: 'Raleway', sans-serif;
+}
+
+#section2 .pairing-sample .up p {
+	font-family: 'Open Sans';
+	font-weight: normal;
+}
+
+#section3 .pairing-sample .up h2 {
+	font-style: italic;
+	font-family: 'Playfair Display', serif;
+}
+
+#section3 .pairing-sample .up p {
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 1rem;
+}
+
+#section4 .pairing-sample .up h2 {
+	font-weight: 700;
+	font-family: 'Roboto', sans-serif;
+}
+
+#section4 .pairing-sample .up p {
+	font-size: 1rem;
+	line-height: 23px;
+	font-family: 'Lora', serif;
+}
+
+#section5 .pairing-sample .up h2 {
+	font-weight: 400;
+	font-family: 'Abril Fatface', cursive;
+}
+
+#section5 .pairing-sample .up p {
+	font-weight: 300;
+	font-family: 'Poppins', sans-serif;
+	font-size: 1rem;
+	line-height: 23px;
+}
+
+#section6 .pairing-sample .up h2 {
+	font-size: 48px;
+	line-height: 48px;
+	font-weight: 400;
+	font-family: 'Ruda', sans-serif;
+}
+
+#section6 .pairing-sample .up p {
+	line-height: 23px;
+	font-weight: 300;
+	font-family: 'Poppins', sans-serif;
+	font-size: 0.9rem;
+}
+
+#section7 .pairing-sample .up h2 {
+	line-height: 51px;
+	font-weight: 700;
+	font-style: italic;
+	font-family: 'Cormorant Garamond', serif;
+}
+
+#section7 .pairing-sample .up p {
+	font-size: 15px;
+	line-height: 23px;
+	font-weight: 300;
+	font-family: 'Fira Sans', sans-serif;
+}
+
+#section8 .pairing-sample .up h2 {
+	font-size: 46px;
+	line-height: 44px;
+	font-weight: 700;
+	font-family: 'PT', sans-serif;
+}
+
+#section8 .pairing-sample .up p {
+	font-size: 1rem;
+	line-height: 23px;
+	font-family: 'Playfair Display', serif;
+}
+
+#section9 .pairing-sample .up h2 {
+	font-size: 39px;
+	line-height: 40px;
+	font-weight: 300;
+	font-family: 'Roboto', sans-serif;
+	text-transform: uppercase;
+}
+
+#section9 .pairing-sample .up p {
+	font-family: 'Cabin';
+}
+
+#section10 .pairing-sample .up h2 {
+	font-size: 46px;
+	line-height: 51px;
+	font-weight: 300;
+	font-family: 'Oxygen', sans-serif;
+}
+
+#section10 .pairing-sample .up p {
+	font-size: 16px;
+	line-height: 23px;
+	font-family: 'Noto Serif', serif;
+}
+
 #section2 {
 	background-image: url('./img/bg2.jpg');
 }
